# copper_rs

./: .gitlab-ci.yml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml
copper_cli/: Cargo.toml
copper_cli/src/: main.rs
copper_lib/: Cargo.toml
copper_lib/src/: directories.rs  lib.rs  modpack.rs  store.rs  version.rs
copper_lib/src/api/: mod.rs  mojang.rs  version.rs
copper_lib/src/api/mojang/: mod.rs  version.rs  version_manifest.rs
copper_lib/src/data/: manifest.rs  mod.rs  profile.rs
copper_lib/src/instance/: config.rs  helpers.rs  instance.rs  mod.rs
copper_lib/src/structs/: asset_index.rs  mod.rs  version_manifest.rs
copper_lib/src/version/: manifest.rs  mod.rs
default/: Cargo.toml
default/src/: lib.rs
