[package]
name = "copper_lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.1", features = ["alloc"] }
chrono = "0.4"
data-encoding = "2"
default = "0.1"
dirs = "4"
lazy_static = "1"
os_info = "3"
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
toml = "0.5"
tracing = "0.1"
zip = "0.6"

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json", "rustls-tls"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]
